add command line script, use double precision

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,6 @@ install_requires =
     matplotlib
     pandas
     torch_nl
+[options.entry_points]
+console_scripts =
+    mace_md = scripts.run_md:main
