update run_md, tidy up test files

--- a/.gitignore
+++ b/.gitignore
@@ -16,16 +16,15 @@ build/
 # IDE
 .idea/
 .vscode/
+nan-error-logs/
 
 
-*.pdb
-*.xyz
-*.sdf
 *.out
-*.sh
 *.pt
 *.txt
 *.log
 *.model
-*.sh
+
 *.nc
+*.yaml
+
